# ZeroCP

./: .clang-format  .editorconfig  CMakeLists.txt  CODE_STYLE.md  CPPLINT.cfg  DGRAM_FIX_SUMMARY.md  README.md  TESTING_SUMMARY.md  ZEROCP2.0版本代码架构.md  ZEROCP_2_0_COMPLETION_SUMMARY.md  ZEROCP_2_0_STRUCTURE.md  format_all.sh  run_tests.sh
docs/: IMPLEMENTATION_SUMMARY.md  (+16 more)
test/chunktest/: CMakeLists.txt  COMPILATION_SUCCESS.md  QUICKSTART.md  README.md  TEST_SUMMARY.md  build.sh  manual_test.sh  run_chunk_test.sh  run_shared_chunk_test.sh  test_chunk_reader  test_chunk_reader.cpp  test_chunk_writer  test_chunk_writer.cpp  test_shared_chunk.cpp
test/memory/: CMakeLists.txt  test_segment_allocator.cpp
test/mempool_managertest/: .gitignore  CMakeLists.txt  COMPILATION_FIXES.md  CREATION_TEST_GUIDE.md  NEW_TEST_ADDED.md  QUICKSTART.md  README.md  TEST_GUIDE.md  TEST_SUMMARY.md  publishertest.cpp  run_test.sh  server_test.cpp  test_client.cpp  test_mempool_creation.cpp  test_mempool_manager_basic.cpp  test_mempool_manager_multiprocess.cpp  test_server.cpp
test/posix/: CMakeLists.txt  build_and_run_string_test.sh
test/posix/ipc/: CMakeLists.txt  README_TEST.md  build_and_run_tests.sh  test_cross_process_shm.cpp  test_posix_sharedmemory.cpp
test/posix/ipc/multi_process_test/: .gitignore  CMakeLists.txt  INDEX.md  MANUAL_RUN_GUIDE.md  Makefile  QUICKSTART.md  README.md  TEST_SUMMARY.md  build.sh  client1.cpp  client2.cpp  client3.cpp  client4.cpp  client5.cpp  config.hpp  run_test.sh  server.cpp  test.sh
test/posix/string_test/: CMakeLists.txt  README.md  build_and_run.sh  simple_build.sh  test_overflow.cpp  test_string.cpp
test/report/: CMakeLists.txt  README_TEST.md  build_and_run_tests.sh  test_comprehensive.cpp  test_performance.cpp
test/service_description_test/: CMakeLists.txt  client.cpp  run_test.sh
test/zerocp_daemontest/: CMakeLists.txt
test/zerocp_daemontest/heartbeatPool_test/: CMakeLists.txt  README.md  build_and_test.sh  cleanup.sh  client_0.cpp  client_1.cpp  client_2.cpp  client_3.cpp  client_4.cpp  client_5.cpp  client_6.cpp  client_7.cpp  client_8.cpp  client_9.cpp  client_base.hpp  client_test.cpp  diagnose_heartbeat.cpp  test_slot_index_timeout.sh
test/zerocp_daemontest/pusu_test/: CMakeLists.txt  README.md  publisher_client.cpp  pusu_test_common.hpp  run_pusu_test.sh  subscriber_client.cpp
test/zerocp_daemontest/service_description_test/: CMakeLists.txt  build.sh  client.cpp  client1.cpp  client2.cpp  client3.cpp  server.cpp  test_registration.sh
tools/introspection/: CMakeLists.txt  README.md  introspection_main.cpp
zerocp_daemon/: CMakeLists.txt  daemon_main.cpp
zerocp_daemon/application/: diroute_main.cpp
zerocp_daemon/communication/include/: diroute.hpp  service_description.hpp
zerocp_daemon/communication/include/popo/: message_header.hpp  posh_runtime.hpp  publisher.hpp  subscriber.hpp
zerocp_daemon/communication/include/routemsg/: routemsg.hpp
zerocp_daemon/communication/include/runtime/: heatbeat.hpp  ipc_interface_creator.hpp  ipc_runtime_interface.hpp  message_runtime.hpp  process_manager.hpp  process_runtime.hpp  processinfo.hpp
zerocp_daemon/communication/source/: diroute.cpp
zerocp_daemon/communication/source/popo/: posh_runtime.cpp
zerocp_daemon/communication/source/runtime/: ipc_interface_creator.cpp  ipc_runtime_interface.cpp  message_runtime.cpp  process_manager.cpp  process_runtime.cpp
zerocp_daemon/diroute/: diroute_components.hpp  diroute_memory_manager.cpp  diroute_memory_manager.hpp
zerocp_daemon/include/: resource_manager.hpp
zerocp_daemon/memory/: MEMORY_INITIALIZATION_GUIDE.md  README_MEMPOOL_ALLOCATOR.md  memory.md  shared_memory_layout_detailed.md
zerocp_daemon/memory/include/: chunk_header.hpp  chunk_manager.hpp  chunkheader.hpp  default_memorypool.hpp  heartbeat.hpp  heartbeat_pool.hpp  mem_pool.hpp  memory_pool.hpp  mempool.hpp  mempool_allocator.hpp  mempool_config.hpp  mempool_introspection.hpp  mempool_manager.hpp  mooconfig.hpp  pool_allocator.hpp  posixshm_provider.hpp  segment_allocator.hpp  segmentconfig.hpp
zerocp_daemon/memory/source/: mempool.cpp  mempool_allocator.cpp  mempool_config.cpp  mempool_manager.cpp  pool_allocator.cpp  posixshm_provider.cpp  segment_allocator.cpp  segmentconfig.cpp
zerocp_daemon/mempool/: CROSS_PROCESS_TRANSFER.md  SHARED_CHUNK_USAGE.md  chunksetting.hpp  shared_chunk.cpp  shared_chunk.hpp
zerocp_daemon/sharememory/include/: memoryblock.hpp  posixshm_provider.hpp
zerocp_daemon/sharememory/source/: posixshm_provider.cpp
zerocp_daemon/source/: resource_manager.cpp
zerocp_foundationLib/posix/ipc/: CMakeLists.txt  build_test.sh
zerocp_foundationLib/posix/ipc/example/: shared_memory_example.cpp  test_getMemorySize.cpp
zerocp_foundationLib/posix/ipc/include/: posix_memorymap.hpp  posix_sharedmemory.hpp  posix_sharedmemory_object.hpp  unix_domainsocket.hpp
zerocp_foundationLib/posix/ipc/source/: posix_memorymap.cpp  posix_sharedmemory.cpp  posix_sharedmemory_object.cpp  unix_domainsocket.cpp
zerocp_foundationLib/posix/ipc/test/: CMakeLists.txt  build_and_run_tests.sh  test_posix_sharedmemory.cpp
zerocp_foundationLib/posix/posixcall/: CMakeLists.txt  CPP_MODERN_FEATURES.md  test_posix_call.cpp  test_system_calls.cpp
zerocp_foundationLib/report/example/: CMakeLists.txt  complete_demo.cpp  test_backend.cpp  test_fixed_buffer.cpp  test_logstream.cpp  test_performance  test_startup.cpp
zerocp_introspection/: ARCHITECTURE.md  CMakeLists.txt  README.md  example_usage.cpp  introspection-config.cmake.in
zerocp_introspection/include/introspection/: introspection_client.hpp  introspection_server.hpp  introspection_types.hpp
zerocp_introspection/source/: introspection_server.cpp
zerocp_introspection/src/: introspection_client.cpp
zerocp_introspection/test/: .gitignore  CMakeLists.txt  QUICK_START.md  README.md  test_integration.cpp  test_introspection_client.cpp  test_introspection_server.cpp  test_introspection_types.cpp
zerocp_tests/posix_call/: CMakeLists.txt  README.md  run_test.sh  test_posix_call.cpp  test_posix_call_simple.cpp
(+89 files in other folders)
